syntax = "proto3";

package qclaogui.task.v1;

import "buf/validate/validate.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/qclaogui/gaip/genproto/task/apiv1/taskpb";

message Task {
  option (google.api.resource) = {
    type: "task.qclaogui.com/Task"
    pattern: "tasks/{task}"
    singular: "task"
    plural: "tasks"
  };

  int64 id = 1;
  string title = 2 [(buf.validate.field).string.min_len = 3];
  string description = 3;
  google.protobuf.Timestamp deadline = 4;
  google.protobuf.Timestamp completed_at = 5;
  google.protobuf.Timestamp create_time = 1000 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).timestamp.lt_now = true
  ];
  google.protobuf.Timestamp update_time = 1001 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message CreateTaskRequest {
  // The parent resource where this task will be created.
  // Format: projects/{project}
  reserved "parent";
  reserved 1;

  // Task is the the task to create.
  Task task = 2 [(google.api.field_behavior) = REQUIRED];
}

message UpdateTaskRequest {
  Task task = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "task.qclaogui.com/Task"}
  ];

  google.protobuf.FieldMask update_mask = 2;
}

message DeleteTaskRequest {
  int64 id = 1 [
    (buf.validate.field).int64.gt = 0,
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "task.qclaogui.com/Task"}
  ];
}

message UndeleteTaskRequest {
  int64 id = 1 [
    (buf.validate.field).int64.gt = 0,
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "task.qclaogui.com/Task"}
  ];
}

message GetTaskRequest {
  int64 id = 1 [
    (buf.validate.field).int64.gt = 0,
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "task.qclaogui.com/Task"}
  ];
}

message ListTasksRequest {
  reserved 1;
  reserved "parent";

  int32 page_size = 2 [(google.api.field_behavior) = OPTIONAL];
  string page_token = 3 [(google.api.field_behavior) = OPTIONAL];
}

message ListTasksResponse {
  repeated Task tasks = 1;

  string next_page_token = 2;
}
